# htop-rs

./: .gitignore  ARCHITECTURE.md  Cargo.toml  IMPROVEMENTS.md  NOTES.md  README.md  TODO.md  logo.jp2
.github/workflows/: audit.yml  ci.yml  release.yml
src/: main.rs  ncurses_compat.rs
src/core/: field_widths.rs  machine.rs  mod.rs  process.rs  settings.rs
src/meters/: battery_meter.rs  blank_meter.rs  clock_meter.rs  cpu_meter.rs  date_meter.rs  datetime_meter.rs  diskio_meter.rs  diskio_rate_meter.rs  diskio_time_meter.rs  filedescriptors_meter.rs  gpu_meter.rs  hostname_meter.rs  hugepages_meter.rs  load_meter.rs  memory_meter.rs  memoryswap_meter.rs  meter_bg_scanner.rs  mod.rs  networkio_meter.rs  pressure_stall_meter.rs  selinux_meter.rs  stub_meters.rs  swap_meter.rs  system_meter.rs  systemd_meter.rs  tasks_meter.rs  uptime_meter.rs  zfs_arc_meter.rs  zram_meter.rs
src/platform/: bg_scanner.rs  darwin.rs  darwin_bg_scanner.rs  linux.rs  linux_bg_scanner.rs  mod.rs
src/ui/: crt.rs  function_bar.rs  header.rs  info_screen.rs  main_panel.rs  menus.rs  mod.rs  panel.rs  process_info_screens.rs  rich_string.rs  row_print.rs  screen_manager.rs  search_filter.rs  setup_screen.rs  side_panel_menu.rs
src/ui/setup/: meter_registry.rs  mod.rs  types.rs
tools/: debug_kernel_threads.rs  list_kernel_threads.rs
