[package]
name = "htop-rs"
version = "0.1.1"
edition = "2021"
rust-version = "1.93.0"
authors = ["Trung Lê"]
description = "A Rust port of htop - an interactive process viewer"
license = "GPL-2.0-or-later"
repository = "https://github.com/runlevel5/htop-rs"
keywords = ["htop", "process", "monitor", "terminal", "ncurses"]
categories = ["command-line-utilities", "os"]
default-run = "htop-rs"

[dependencies]
# Pure Rust ncurses implementation - no C dependencies
ncurses = { git = "https://github.com/runlevel5/ncurses-pure-rs", package = "ncurses-pure", features = ["wide", "mouse"] }

# Command line argument parsing
clap = { version = "4.5", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Time handling
chrono = "0.4"

# User/group information
uzers = "0.12"

# Lazy static for global state
lazy_static = "1.5"

# Bitflags for scan flags
bitflags = "2.10"
os_info = "3.14"

# Platform-specific dependencies
[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.18"
rayon = "1.10"

[target.'cfg(target_os = "macos")'.dependencies]
libproc = "0.14"
mach2 = "0.6"
libc = "1.0.0-alpha.2"
rayon = "1.10"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31", features = ["signal", "user", "process", "resource"] }
libc = "1.0.0-alpha.2"

[features]
default = []
hwloc = []  # Optional hardware locality support

[[bin]]
name = "htop-rs"
path = "src/main.rs"

[[bin]]
name = "list_kernel_threads"
path = "tools/list_kernel_threads.rs"

[[bin]]
name = "debug_kernel_threads"
path = "tools/debug_kernel_threads.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

# Profiling: optimized but with debug symbols
[profile.profiling]
inherits = "release"
debug = true
strip = false

# Optimize dependencies even in debug builds for better dev experience
[profile.dev.package."*"]
opt-level = 2

# Slightly optimize debug builds for better performance during development
[profile.dev]
opt-level = 1
